还有太多东西需要更改，其中主要是能力系统变化过大