@@ -4,6 +4,6 @@ public class APMath
 {
     public static int ClampToInt(long value)
     {
-        return Math.clamp(value, Integer.MIN_VALUE, Integer.MAX_VALUE);
+        return (int) Math.min(Integer.MAX_VALUE, Math.max(value, Integer.MIN_VALUE));
     }
 }
